modify filter-bookings to return an empty list if the studentId (not null or "") is not a studentId or a partial studentId in the database; add unit test and generate report.